# policykit-kde

./: .gitignore
old-policykit-kde/: CMakeLists.txt  policykit-kde.desktop
policykit-gnome/: COPYING  HACKING  MAINTAINERS  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac
policykit-gnome/data/: Makefile.am  gnome-org.freedesktop.PolicyKit.AuthenticationAgent.service.in  org.gnome.PolicyKit.AuthorizationManager.service.in  org.gnome.PolicyKit.service.in  polkit-gnome-authorization.desktop.in  polkit-gnome.pc.in  polkit-gnome.schemas.in
policykit-gnome/doc/: Makefile.am  polkit-gnome-docs.xml
policykit-gnome/examples/: Makefile.am  org.gnome.policykit.examples.policy.in  polkit-gnome-example.c
policykit-gnome/po/: ChangeLog  LINGUAS  POTFILES.in  ar.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  fi.po  fr.po  he.po  hu.po  it.po  ja.po  nb.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sv.po  zh_CN.po  zh_HK.po  zh_TW.po
policykit-gnome/polkit-gnome/: Makefile.am  polkit-gnome-action.c  polkit-gnome-action.h  polkit-gnome-auth.c  polkit-gnome-auth.h  polkit-gnome-context.c  polkit-gnome-context.h  polkit-gnome-toggle-action.c  polkit-gnome-toggle-action.h  polkit-gnome.h
policykit-gnome/src/: Makefile.am  inotify_local.h  main.c  polkit-gnome-auth-dialog.c  polkit-gnome-auth-dialog.h  polkit-gnome-manager.c  polkit-gnome-manager.h  polkit-gnome-manager.xml
policykit-gnome/tools/: Makefile.am  polkit-gnome-authorization.c  single-instance.xml
policykit-kde3-pardus/: CMakeLists.txt  TODO
policykit-kde3-pardus/data/: kde-org.freedesktop.PolicyKit.AuthenticationAgent.service
policykit-kde3-pardus/dbus-qt3-backport/: CMakeLists.txt  ChangeLog  README  TODO  qdbusintegrator.cpp
policykit-kde3-pardus/dbus-qt3-backport/doc/: CMakeLists.txt
policykit-kde3-pardus/dbus-qt3-backport/doc/config/: Doxyfile
policykit-kde3-pardus/po/: de.po  es.po  fr.po  it.po  nl.po  pl.po  policykit-kde.pot  sv.po  tr.po
policykit-kde3-pardus/src/: CMakeLists.txt  authdialog.cpp  authdialog.h  authdialogui.ui  debug.cpp  debug.h  main.cpp  policykitkde.cpp  policykitkde.h  service.cpp  service.h
